<resources>
    <string name="app_name">GADSLeaderboardApp</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="github_link">Project on GitHub (Link)</string>
    <string name="submit">Submit</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
</resources>